<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_request_blood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RequestBlood"
    android:background="@color/colorScheme">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentEnd="true">

        <Button
            android:text="@string/reqst"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_request"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@android:color/holo_red_light"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="16dp" />

        <EditText
            android:layout_width="325dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:hint="@string/patient_s_name"
            android:singleLine="true"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.7" />

        <EditText
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="325dp"
            android:layout_height="39dp"
            android:hint="@string/clinical_diagnosis"
            android:singleLine="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.060000002"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.58" />

        <EditText
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText5"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="325dp"
            android:layout_height="39dp"
            android:hint="@string/hospital"
            android:singleLine="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText7"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText6"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="325dp"
            android:layout_height="39dp"
            android:hint="Age"
            android:singleLine="true"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:ems="10"
            android:id="@+id/editText7"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="325dp"
            android:layout_height="39dp"
            android:hint="Address"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:inputType="text"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="325dp"
            android:layout_height="39dp"
            android:hint="@string/attending_physician"
            android:singleLine="true"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintHorizontal_bias="0.55" />

        <Spinner
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:id="@+id/spnr_bloodtype"
            android:entries="@array/blood_types"
            android:spinnerMode="dropdown"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editText4"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintVertical_bias="0.56" />

        <Spinner
            android:layout_width="141dp"
            android:layout_height="37dp"
            android:entries="@array/components"
            android:spinnerMode="dropdown"
            android:id="@+id/spnr_component"
            android:layout_marginEnd="24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/spnr_bloodtype"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintBottom_toTopOf="@+id/editText4"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintVertical_bias="0.56" />


    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="284dp"
        android:layout_height="92dp"
        app:srcCompat="@drawable/requestblood"
        android:id="@+id/imageView2"
        tools:layout_editor_absoluteY="16dp"
        tools:layout_editor_absoluteX="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
